--- a/story_17/views/home.handlebars
+++ b/story_17/views/home.handlebars
@@ -1,9 +1,9 @@
 <form method="POST">
   <fieldset>
     <legend>farm</legend>
-    <input id="new_f1" type="text" name="new_f1"> field 1 (<em>Required</em>)</input> <br>
-    <input id="new_f2" type="text" name="new_f2"> field 2 (<em>Required</em>)</input> <br>
-    <input id="new_f3" type="text" name="new_f3"> field 3 (<em>Required</em>)</input> <br>
+    <input id="new_f1" type="text" name="new_f1"> field 1 </input> <br>
+    <input id="new_f2" type="text" name="new_f2"> field 2 </input> <br>
+    <input id="new_f3" type="text" name="new_f3"> field 3 </input> <br>
         
     <input id="add" type="submit" name="add" value="submit" onclick="add_row(event)">
   </fieldset>
