--- a/web/extagent/views/home.handlebars
+++ b/web/extagent/views/home.handlebars
@@ -2,13 +2,13 @@ This application is currently in development, so features are made available thr
 <ul>
 	<li>For application users:
 	<ul>
-		<li><a href="./overview">Overview Tool</a>: Use overview tool to enter basic data and get basic recommendations
-		<li><a href="./register">Register Account</a>: Register as new user, storing basic data entered in the Overview Tool to the database
+		<li><a href="http://flip3.engr.oregonstate.edu:25032">Overview Tool</a>: <b>(PLEASE CLICK FOR STORIES 1,2,3)</b> Use overview tool to enter basic data and get basic recommendations
 		<li>Farm Details: Enter farm details (fields, crops, livestock, and (pending) techniques for fields
 		<ul>
-			<li><a href="./farmFields">Farm Details - fields</a>
-			<li><a href="./farmCrops">Farm Details - crops</a>
-			<li><a href="./farmLivestock">Farm Details - livestock</a>
+			<li><a href="./farmFields">Farm Details - fields</a><b> (PLEASE CLICK FOR STORY 17)</b>
+			<li><a style="color:grey;" href="./farmCrops">Farm Details - crops</a> <b><em> TODO</em></b>
+			<li><a style="color:grey;" href="./farmLivestock">Farm Details - livestock</a><b><em> TODO</em></b>
+			<li>Farm Details - Inventory <em><b><em>TODO</em></b>
 			<li><!--a href="./farmTechniques"-->Farm Details - techniques<!--/a--> - not yet available
 		</ul>
 	</ul>
