--- a/web/extagent/views/home.handlebars
+++ b/web/extagent/views/home.handlebars
@@ -2,7 +2,7 @@ This application is currently in development, so features are made available thr
 <ul>
 	<li>For application users:
 	<ul>
-		<li><a href="http://flip3.engr.oregonstate.edu:25032">Overview Tool</a>: <b>(PLEASE CLICK FOR STORIES 1,2,3)</b> Use overview tool to enter basic data and get basic recommendations
+		<li><a href="./overview">Overview Tool</a>: <b>(PLEASE CLICK FOR STORIES 1,2,3)</b> Use overview tool to enter basic data and get basic recommendations
 		<li>Farm Details: Enter farm details (fields, crops, livestock, and (pending) techniques for fields
 		<ul>
 			<li><a href="./farmFields">Farm Details - fields</a><b> (PLEASE CLICK FOR STORY 17)</b>
