fix homepage links
point to nick & jake's site for the planner-recommendations

--- a/web/extagent/views/home.handlebars
+++ b/web/extagent/views/home.handlebars
@@ -5,6 +5,7 @@ This application is currently in development, so features are made available thr
 		<li><a href="./overview">Overview Tool</a>: Use overview tool to enter basic data, get basic recommendations, and register new user account
 		<li>Farm Details: Enter farm details (fields, crops, livestock, and (pending) techniques for fields
 		<ul>
+			<li><a href="http://flip3.engr.oregonstate.edu:25022/planner">Farm Details - recommendations</a>
 			<li><a href="./farmFields">Farm Details - fields</a>
 			<li><a href="./farmCrops">Farm Details - crops</a>
 			<li><a href="./farmLivestock">Farm Details - livestock</a>
